website/i18n/zh-CN/docusaurus-plugin-content-docs/version-3.3.2/blog.mdx
---
description: Deploy a full-featured blog in no time with Docusaurus.
---

# 博客功能

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

博客功能可让您快速部署一个功能完整的博客系统。

:::info

完整配置选项请查阅[博客插件API参考文档](./api/plugins/plugin-content-blog.mdx)。

:::

## 初始设置 {#initial-setup}

要启用博客功能，请先创建`blog`目录。

然后在`docusaurus.config.js`中添加博客导航链接：

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    // ...
    navbar: {
      items: [
        // ...
        // highlight-next-line
        {to: 'blog', label: 'Blog', position: 'left'}, // or position: 'right'
      ],
    },
  },
};
```

## 添加文章 {#adding-posts}

在博客目录中创建Markdown文件即可发布文章。

例如创建文件`website/blog/2019-09-05-hello-docusaurus.md`：

```md title="website/blog/2019-09-05-hello-docusaurus.md"
---
title: Welcome Docusaurus
description: This is my first post on Docusaurus.
slug: welcome-docusaurus-v2
authors:
  - name: Joel Marcey
    title: Co-creator of Docusaurus 1
    url: https://github.com/JoelMarcey
    image_url: https://github.com/JoelMarcey.png
  - name: Sébastien Lorber
    title: Docusaurus maintainer
    url: https://sebastienlorber.com
    image_url: https://github.com/slorber.png
tags: [hello, docusaurus-v2]
image: https://i.imgur.com/mErPwqL.png
hide_table_of_contents: false
---

Welcome to this blog. This blog is created with [**Docusaurus 2**](https://docusaurus.io/).

<!-- truncate -->

This is my first post on Docusaurus 2.

A whole bunch of exploration to follow.
```

[Front Matter](./guides/markdown-features/markdown-features-intro.mdx#front-matter)可用于添加文章元数据（如作者信息），但Docusaurus也能自动推断必要元数据。完整字段说明请参见[API文档](api/plugins/plugin-content-blog.mdx#markdown-front-matter)。

## 博客列表 {#blog-list}

博客首页（默认路径为`/blog`）即_博客列表页_，集中展示所有文章。

在文章中使用`<!--truncate-->`标记来定义列表页显示的摘要内容。该标记前的所有内容将作为摘要显示，且必须为独立可渲染的Markdown格式。例如：

```md title="website/blog/my-post.md" {7}
---
title: Markdown blog truncation example
---

All these will be part of the blog post summary.

<!-- truncate -->

But anything from here on down will not be.
```

对于`.mdx`文件，请使用MDX注释`{/* truncate */}`：

```md title="website/blog/my-post.mdx" {7}
---
title: MDX blog truncation Example
---

All these will be part of the blog post summary.

{/* truncate */}

But anything from here on down will not be.
```

默认每页显示10篇文章，可通过插件配置中的`postsPerPage`参数控制分页。设为`postsPerPage: 'ALL'`将禁用分页并显示所有文章。还可为列表页添加meta描述以优化SEO：

```js title="docusaurus.config.js"
export default {
  // ...
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        blog: {
          // highlight-start
          blogTitle: 'Docusaurus blog!',
          blogDescription: 'A Docusaurus powered blog!',
          postsPerPage: 'ALL',
          // highlight-end
        },
      },
    ],
  ],
};
```

## 博客侧边栏 {#blog-sidebar}

博客侧边栏默认显示最近5篇文章，可通过`blogSidebarCount`参数调整。设为`0`将完全禁用侧边栏（同时移除容器以增加主内容区宽度）。特殊值`'ALL'`会显示_所有_文章。

可通过`blogSidebarTitle`修改侧边栏标题。例如当使用`blogSidebarCount: 'ALL'`时，可将默认的"最近文章"改为"所有文章"：

```js title="docusaurus.config.js"
export default {
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        blog: {
          // highlight-start
          blogSidebarTitle: 'All posts',
          blogSidebarCount: 'ALL',
          // highlight-end
        },
      },
    ],
  ],
};
```

## 文章日期 {#blog-post-date}

Docusaurus支持从多种路径格式（如`YYYY-MM-DD-my-blog-post-title.md`或`YYYY/MM/DD/my-blog-post-title.md`）提取`YYYY-MM-DD`日期，便于按年/月分组或使用扁平结构。

<details>
<summary>Supported date extraction patterns</summary>

| Pattern | Example |
| --- | --- |
| Single file | `2021-05-28-my-blog-post-title.md` |
| MDX file | `2021-05-28-my-blog-post-title.mdx` |
| Single folder + `index.md` | `2021-05-28-my-blog-post-title/index.md` |
| Folder named by date | `2021-05-28/my-blog-post-title.md` |
| Nested folders by date | `2021/05/28/my-blog-post-title.md` |
| Partially nested folders by date | `2021/05-28-my-blog-post-title.md` |
| Nested folders + `index.md` | `2021/05/28/my-blog-post-title/index.md` |
| Date in the middle of path | `category/2021/05-28-my-blog-post-title.md` |

Docusaurus can extract the date from the posts using any of the naming patterns above. It is advisable to choose one pattern and apply it to all posts to avoid confusion.

</details>

:::tip

使用文件夹结构便于将文章图片与Markdown文件存放在同一目录。

:::

此命名约定是可选的，您也可以通过 front matter 提供日期。由于 front matter 遵循支持日期时间标记的 YAML 语法，当需要更精确的发布日期时可以使用 front matter。例如，若有多篇文章在同一天发布，可通过时间字段进行排序：

```md title="earlier-post.md"
---
date: 2021-09-13T10:00
---
```

```md title="later-post.md"
---
date: 2021-09-13T18:00
---
```

## 博文作者 {#blog-post-authors}

使用 `authors` front matter 字段声明博文作者。每个作者至少需包含 `name` 或 `image_url` 字段。Docusaurus 会识别 `url`、`email` 和 `title` 等信息，但也支持其他自定义字段。

### 行内作者声明 {#inline-authors}

可直接在 front matter 中声明博文作者：

<Tabs groupId="author-front-matter">
<TabItem value="single" label="Single author">

```md title="my-blog-post.md"
---
authors:
  name: Joel Marcey
  title: Co-creator of Docusaurus 1
  url: https://github.com/JoelMarcey
  image_url: https://github.com/JoelMarcey.png
  email: jimarcey@gmail.com
---
```

</TabItem>
<TabItem value="multiple" label="Multiple authors">

```md title="my-blog-post.md"
---
authors:
  - name: Joel Marcey
    title: Co-creator of Docusaurus 1
    url: https://github.com/JoelMarcey
    image_url: https://github.com/JoelMarcey.png
    email: jimarcey@gmail.com
  - name: Sébastien Lorber
    title: Docusaurus maintainer
    url: https://sebastienlorber.com
    image_url: https://github.com/slorber.png
---
```

</TabItem>
</Tabs>

:::tip

此方式适合快速上手或临时性、非固定作者场景。

:::

:::info

推荐使用 `authors` front matter，但旧版 `author_*` 语法仍被兼容：

```md title="my-blog-post.md"
---
author: Joel Marcey
author_title: Docusaurus 1 联合创始人
author_url: https://github.com/JoelMarcey
author_image_url: https://github.com/JoelMarcey.png
---
```

:::

### 全局作者配置 {#global-authors}

对于固定供稿作者，在每篇博文中维护作者信息可能较为繁琐。

可通过配置文件全局声明作者信息：

```yml title="website/blog/authors.yml"
jmarcey:
  name: Joel Marcey
  title: Co-creator of Docusaurus 1
  url: https://github.com/JoelMarcey
  image_url: https://github.com/JoelMarcey.png
  email: jimarcey@gmail.com

slorber:
  name: Sébastien Lorber
  title: Docusaurus maintainer
  url: https://sebastienlorber.com
  image_url: https://github.com/slorber.png
```

:::tip

使用 `authorsMapPath` 插件选项配置路径，也支持 JSON 格式。

:::

在博文 front matter 中可引用全局配置的作者：

<Tabs groupId="author-front-matter">
<TabItem value="single" label="Single author">

```md title="my-blog-post.md"
---
authors: jmarcey
---
```

</TabItem>
<TabItem value="multiple" label="Multiple authors">

```md title="my-blog-post.md"
---
authors: [jmarcey, slorber]
---
```

</TabItem>
</Tabs>

:::info

`authors` 系统具有高度灵活性，可满足进阶需求：

<details>
  <summary>混合使用行内作者与全局作者</summary>

可主要使用全局作者，同时保留行内作者声明：

```md title="my-blog-post.md"
---
authors:
  - jmarcey
  - slorber
  - name: 行内作者姓名
    title: 行内作者头衔
    url: https://github.com/inlineAuthor
    image_url: https://github.com/inlineAuthor
---
```

</details>

<details>
  <summary>局部覆盖全局作者配置</summary>

可针对单篇博文修改全局作者的字段：

```md title="my-blog-post.md"
---
authors:
  - key: jmarcey
    title: Joel Marcey 的新头衔
  - key: slorber
    name: Sébastien Lorber 的新名字
---
```

</details>

<details>
  <summary>本地化作者配置文件</summary>

配置文件支持本地化，只需创建对应语言的副本：

```bash
website/i18n/[locale]/docusaurus-plugin-content-blog/authors.yml
```

</details>

:::

无论是通过 front matter 还是作者映射表声明，每个作者必须至少包含姓名或头像。若某篇文章所有作者均未设置姓名，Docusaurus 会以紧凑形式显示其头像。效果可参考[此测试文章](/tests/blog/2022/01/20/image-only-authors)。

:::warning[Feed 生成]

[RSS 订阅源](#feed)要求作者必须设置 email 字段才会出现在订阅中。

:::

## 阅读时长 {#reading-time}

Docusaurus 会根据字数自动生成每篇博文的阅读时长预估。我们提供了自定义此功能的选项。

```js title="docusaurus.config.js"
export default {
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        blog: {
          // highlight-start
          showReadingTime: true, // When set to false, the "x min read" won't be shown
          readingTime: ({content, frontMatter, defaultReadingTime}) =>
            defaultReadingTime({content, options: {wordsPerMinute: 300}}),
          // highlight-end
        },
      },
    ],
  ],
};
```

`readingTime` 回调函数接收三个参数：博客内容文本（字符串形式）、前端元数据（键值对记录）以及默认的阅读时长计算函数。它应返回一个数字（表示阅读分钟数）或 `undefined`（禁用该页面的阅读时长显示）。

默认阅读时长计算函数可接受额外选项：`wordsPerMinute`（数字类型，默认值300）和 `wordBound`（从字符串到布尔值的函数）。当传入 `wordBound` 的字符串应被视为单词边界时（默认为空格、制表符和换行符），该函数应返回 `true`。

:::tip

通过回调函数满足所有定制需求：

<Tabs>
<TabItem value="disable-per-post" label="按文章禁用">

**单篇文章禁用阅读时长：**

```js title="docusaurus.config.js"
export default {
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        blog: {
          showReadingTime: true,
          // highlight-start
          readingTime: ({content, frontMatter, defaultReadingTime}) =>
            frontMatter.hide_reading_time
              ? undefined
              : defaultReadingTime({content}),
          // highlight-end
        },
      },
    ],
  ],
};
```

用法示例：

```md "my-blog-post.md"
---
hide_reading_time: true
---

该页面将不再显示阅读时长统计！
```

</TabItem>
<TabItem value="passing-options" label="传递选项">

**向默认函数传递选项：**

```js title="docusaurus.config.js"
export default {
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        blog: {
          // highlight-start
          readingTime: ({content, defaultReadingTime}) =>
            defaultReadingTime({content, options: {wordsPerMinute: 100}}),
          // highlight-end
        },
      },
    ],
  ],
};
```

</TabItem>
<TabItem value="using-custom-algo" label="自定义算法">

**使用自定义阅读时长算法：**

```js title="docusaurus.config.js"
import myReadingTime from './myReadingTime';

export default {
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        blog: {
          // highlight-next-line
          readingTime: ({content}) => myReadingTime(content),
        },
      },
    ],
  ],
};
```

</TabItem>
</Tabs>

:::

## 订阅源 {#feed}

通过配置 `feedOptions` 可生成RSS/Atom/JSON订阅源。默认生成RSS和Atom源，将 `feedOptions.type` 设为 `null` 可禁用此功能。

```ts
type FeedType = 'rss' | 'atom' | 'json';

type BlogOptions = {
  feedOptions?: {
    type?: FeedType | 'all' | FeedType[] | null;
    title?: string;
    description?: string;
    copyright: string;
    language?: string; // possible values: http://www.w3.org/TR/REC-html40/struct/dirlang.html#langcodes
    limit?: number | false | null; // defaults to 20
    /** Allow control over the construction of BlogFeedItems */
    createFeedItems?: (params: {
      blogPosts: BlogPost[];
      siteConfig: DocusaurusConfig;
      outDir: string;
      defaultCreateFeedItems: (params: {
        blogPosts: BlogPost[];
        siteConfig: DocusaurusConfig;
        outDir: string;
      }) => Promise<BlogFeedItem[]>;
    }) => Promise<BlogFeedItem[]>;
  };
};
```

配置示例：

```js title="docusaurus.config.js"
export default {
  // ...
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        blog: {
          // highlight-start
          feedOptions: {
            type: 'all',
            copyright: `Copyright © ${new Date().getFullYear()} Facebook, Inc.`,
            createFeedItems: async (params) => {
              const {blogPosts, defaultCreateFeedItems, ...rest} = params;
              return defaultCreateFeedItems({
                // keep only the 10 most recent blog posts in the feed
                blogPosts: blogPosts.filter((item, index) => index < 10),
                ...rest,
              });
            },
          },
          // highlight-end
        },
      },
    ],
  ],
};
```

订阅源访问路径：

<Tabs>
<TabItem value="RSS">

```text
https://example.com/blog/rss.xml
```

</TabItem>
<TabItem value="Atom">

```text
https://example.com/blog/atom.xml
```

</TabItem>
<TabItem value="JSON">

```text
https://example.com/blog/feed.json
```

</TabItem>
</Tabs>

## 高级主题 {#advanced-topics}

### 纯博客模式 {#blog-only-mode}

可将博客文章列表页设为网站首页：将 `routeBasePath` 设置为 `'/'`，博客将通过根路径 `example.com/` 而非子路径 `example.com/blog/` 访问。

```js title="docusaurus.config.js"
export default {
  // ...
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        // highlight-next-line
        docs: false, // Optional: disable the docs plugin
        blog: {
          // highlight-next-line
          routeBasePath: '/', // Serve the blog at the site's root
          /* other blog options */
        },
      },
    ],
  ],
};
```

:::warning

务必删除现有的 `./src/pages/index.js` 首页文件，否则会出现路由冲突！

:::

:::warning

禁用文档插件时，需同步删除配置文件中所有相关引用，特别是导航栏中的文档相关条目。

:::

:::tip

也存在"纯文档模式"，详见[纯文档模式](./guides/docs/docs-introduction.mdx)了解 `routeBasePath` 的详细说明。

:::

### 多博客系统 {#multiple-blogs}

默认情况下，经典主题假定每个网站仅有一个博客，因此只包含一个博客插件实例。如果您希望在一个网站上运行多个博客，同样可以实现！您可以通过在 `docusaurus.config.js` 的 `plugins` 选项中配置另一个博客插件来添加额外博客。

将 `routeBasePath` 设置为第二个博客需要访问的URL路径。请注意，此处的 `routeBasePath` 必须与第一个博客不同，否则可能导致路径冲突！同时，将 `path` 设置为包含第二个博客条目的目录路径。

如[多实例插件文档](./using-plugins.mdx#multi-instance-plugins-and-plugin-ids)所述，您需要为插件分配唯一ID。

```js title="docusaurus.config.js"
export default {
  // ...
  plugins: [
    [
      '@docusaurus/plugin-content-blog',
      {
        /**
         * Required for any multi-instance plugin
         */
        id: 'second-blog',
        /**
         * URL route for the blog section of your site.
         * *DO NOT* include a trailing slash.
         */
        routeBasePath: 'my-second-blog',
        /**
         * Path to data on filesystem relative to site dir.
         */
        path: './my-second-blog',
      },
    ],
  ],
};
```

示例：我们在[此处](/tests/blog)托管了第二个博客。